# dolap-chat

./: Channel.hs  Client.hs  LICENSE  Logger.hs  Msg.hs  Parser.hs  Parser2.hs  Server.hs  dolap.cabal
src/: Parser.hs
web/: a.html  multiply-interpreters-demo.html  websocket.html
web/css/: custom.css  jquery.terminal.css  reset.css
web/js/: jquery.terminal-0.4.11.js
web/web/: websocket.html
web/web/js/: jquery-1.5.js
